# MLGym

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTENANCE.md  README.md  pyproject.toml  requirements.txt  run.py  run_replay.py
.github/ISSUE_TEMPLATE/: BUG_TEMPLATE.yml  DEFAULT.yml  FEATURE_REQUEST.yml
assets/: README.md
configs/agents/: default.yaml  default_gpu_info.yaml  default_lit_search.yaml  default_memory.yaml
configs/datasets/: 3SAT.yaml  README.md  cifar10HF.yaml  coco.yaml  fashionMnistHF.yaml  fineWeb.yaml  kaggleHousePrice.yaml  mnli.yaml
configs/tasks/: 3SATTime.yaml  README.md  battleOfSexes.yaml  blotto.yaml  imageCaptioningCOCO.yaml  imageClassificationCifar10.yaml  imageClassificationCifar10L1.yaml  imageClassificationFMnist.yaml  languageModelingFineWeb.yaml  naturalLanguageInferenceMNLI.yaml  prisonersDilemma.yaml  regressionHousePrice.yaml  regressionHousingPrice.yaml  regressionKaggleHousePrice.yaml  regressionKaggleHousePriceL1.yaml  rlBreakoutMinAtar.yaml  rlMetaMaze.yaml  rlMountainCarContinuous.yaml  rlMountainCarContinuousReinforce.yaml
data/: README.md
data/3SATTime/: evaluate.py  heuristic.py  solver.py
data/battleOfSexes/: evaluate.py  strategy.py  target.py
data/bertMNLI/: baseline.py  baseline_native.py  evaluate.py
data/blotto/: evaluate.py  strategy.py  target.py
data/imageCaptioningCOCO/: baseline.py  evaluate.py  requirements.txt  sample_submission.csv  submission.csv
data/imageClassificationCifar10/: baseline.py  evaluate.py  sample_submission.csv
data/imageClassificationFMnist/: baseline.py  evaluate.py
data/languageModelingFineWeb/: baseline.py  evaluate.py
data/prisonersDilemma/: evaluate.py  strategy.py  target.py
data/regressionKaggleHousePrice/: baseline.py  evaluate.py  sample_submission.csv
data/regressionKaggleHousePrice/_helpers/: _generate_split.py
data/rlBreakoutMinAtar/: evaluate.py  requirements.txt
data/rlBreakoutMinAtar/src/: config.yaml  networks.py  policy.py
data/rlMetaMazeMisc/: evaluate.py
data/rlMetaMazeMisc/src/: config.yaml  helpers.py  networks.py  policy.py  train.py
data/rlMountainCarContinuous/: evaluate.py
data/rlMountainCarContinuous/src/: config.yaml  networks.py  policy.py
data/rlMountainCarContinuousReinforce/src/: config.yaml  policy.py  train.py
demo/: demo.py  trajectory_visualizer.py  vars.py
demonstrations/: memory_demo_imageClassificationFMnist.traj
docker/: aliases.sh  custom_bashrc  generic_conda_requirements.txt  getconda.sh  mlgym.dockerfile  mlgym_rl.dockerfile  requirements.txt  setup_conda.sh
mlgym/: __init__.py  exceptions.py  types.py
mlgym/agent/: base.py  history_processors.py  parsing.py
mlgym/backend/: __init__.py  base.py  debugging.py  human.py  litellm.py  utils.py
mlgym/environment/: env.py  registration.py  spaces.py  tasks.py  utils.py
mlgym/evaluation/: utils.py
mlgym/tools/: commands.py  parsing.py  tools.py
mlgym/utils/: config.py  extras.py  log.py
results/: README.md
results/tables/: aup_scores_test_results.csv  best_ranks_test_results.csv  best_scores_test_results.csv  last_ranks_test_results.csv  last_scores_test_results.csv
scripts/: get_all_results.sh
scripts/evaluation/: get_ranks.py  plot_exit_status.py  process_results.py
scripts/experiments/: 3SAT.sh  blotto.sh  bos.sh  imageCaptioningCOCO.sh  imageClassificationCifar10.sh  imageClassificationCifar10L1.sh  imageClassificationFMnist.sh  languageModelingFineWeb.sh  naturalLanguageInferenceMNLI.sh  prisonersDilemma.sh  regressionKaggleHousePrice.sh  regressionKaggleHousePriceL1.sh  rlBreakoutMinAtar.sh  rlMetaMaze.sh  rlMountainCarContinuous.sh  rlMountainCarContinuousReinforce.sh
scripts/experiments/memory/: imageClassificationFMnist.sh  rlMountainCarContinuous.sh
tools/: README.md  _split_string.py  cursors_defaults.sh  cursors_edit_linting.sh  defaults.sh  edit_linting.sh  filemap.py  insert_linting.sh  literature_search.py  memory_read.py  memory_write.py  parse_pdf_url.py  search.sh  submit.sh  validate.sh
trajectories/mlgym_bench_v0/metagen-claude-35-sonnet-new__3SATHeuristic__better_thought_action_parser_with_insert__t-0.00__p-0.95__c-4.00__install-0__3sat_run_0/: 3SATHeuristic.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-35-sonnet-new__3SATHeuristic__better_thought_action_parser_with_insert__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_0/: 3SATHeuristic.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-35-sonnet-new__3SATHeuristic__better_thought_action_parser_with_insert__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_1/: 3SATHeuristic.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-35-sonnet-new__3SATHeuristic__better_thought_action_parser_with_insert__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_2/: 3SATHeuristic.traj  results.json
trajectories/mlgym_bench_v0/metagen-claude-35-sonnet-new__3SATHeuristic__better_thought_action_parser_with_insert__t-0.00__p-0.95__c-4.00__install-0__parallel_agents_run_3/: 3SATHeuristic.traj  results.json
(+459 files in other folders)
