[project]
name = "mlgym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "config>=0.5.1",
    "datasets>=3.3.2",
    "docker>=7.1.0",
    "gymnasium>=1.0.0",
    "huggingface-hub>=0.29.1",
    "litellm>=1.61.13",
    "numpy>=2.2.3",
    "openai>=1.0",
    "pandas>=2.2.3",
    "pymupdf>=1.25.3",
    "pymupdf4llm>=0.0.17",
    "pypdf>=5.3.0",
    "rich>=13.9.4",
    "rich-argparse>=1.7.0",
    "simple-parsing>=0.1.7",
    "streamlit>=1.42.2",
    "tenacity>=9.0.0",
]
